--- a/public/locales/hi/translation.json
+++ b/public/locales/hi/translation.json
@@ -318,10 +318,10 @@
     "Expired": "समाप्त",
     "Pending": "लंबित",
     "popularDestinations": {
-      "title": "लोकप्रिय गंतव्य देखें",
+      "title": "लोकप्रिय यात्रा गंतव्य देखें",
       "subtitle": "दुनिया के सबसे अधिक देखे जाने वाले गंतव्यों में तत्काल कनेक्टिविटी",
-      "countries": "लोकप्रिय देश",
-      "regions": "लोकप्रिय क्षेत्र"
+      "countries": "शीर्ष देश गंतव्य",
+      "regions": "शीर्ष क्षेत्रीय गंतव्य"
     }
   },
   "bundles": {
@@ -1078,6 +1078,146 @@
           "answer": "हमारा जापान eSIM पूरे देश में अच्छा कवरेज देता है—शहरों से ग्रामीण इलाकों तक।"
         }
       }
+    }
+  },
+  "home": {
+    "hero": {
+      "title": "स्मार्ट यात्रा करें। जुड़े रहें।",
+      "subtitle": "होम-नेटवर्क कीमतों पर eSIM डेटा प्लान। रोमिंग शुल्क से बचें, कहीं भी ऑनलाइन रहें।"
+    },
+    "search": {
+      "title": "अपना परफेक्ट इंटरनेट प्लान खोजें",
+      "destination": "आप कहाँ यात्रा कर रहे हैं?",
+      "placeholder": "देश खोजें (जैसे: फ्रांस, जापान, अमेरिका)",
+      "duration": "आपकी यात्रा कितने दिनों की है?",
+      "findPlans": "प्लान खोजें",
+      "selectCountry": "कृपया कम से कम एक गंतव्य चुनें",
+      "noCountries": "कोई देश नहीं मिला",
+      "maxCountries": "मल्टी-कंट्री प्लान के लिए 3 देश तक चुनें"
+    },
+    "partner": {
+      "recommendedBy": "द्वारा अनुशंसित"
+    },
+    "duration": {
+      "all": "सभी",
+      "7d": "7 दिन",
+      "14d": "14 दिन",
+      "30d": "30 दिन",
+      "90d": "90 दिन",
+      "1yr": "1 साल"
+    },
+    "results": {
+      "countryPlans": "देश प्लान",
+      "regionalPlans": "क्षेत्रीय प्लान",
+      "showRegional": "क्षेत्रीय प्लान दिखाएं ({{count}} उपलब्ध)",
+      "viewRegional": "देखें",
+      "backToCountry": "देश प्लान पर वापस जाएं",
+      "noResults": "आपकी पसंद के लिए कोई प्लान नहीं मिला",
+      "tryDifferentDuration": "लंबी अवधि या अलग गंतव्य चुनने का प्रयास करें"
+    },
+    "table": {
+      "planName": "प्लान का नाम",
+      "data": "डेटा",
+      "validity": "वैधता",
+      "countries": "देश",
+      "price": "कीमत",
+      "viewDetails": "विवरण देखें",
+      "countriesCovered": "देश कवर"
+    },
+    "popular": {
+      "title": "लोकप्रिय यात्रा गंतव्य",
+      "subtitle": "दुनिया भर में हमारे शीर्ष eSIM गंतव्यों की खोज करें"
+    },
+    "howItWorks": {
+      "title": "यह कैसे काम करता है",
+      "subtitle": "4 सरल चरणों में कनेक्ट हों",
+      "step1": {
+        "title": "अपना गंतव्य चुनें",
+        "description": "अपना यात्रा गंतव्य खोजें और अपनी जरूरतों के अनुसार डेटा प्लान चुनें"
+      },
+      "step2": {
+        "title": "अपना eSIM खरीदें",
+        "description": "सुरक्षित रूप से ऑनलाइन खरीदारी पूरी करें। फिजिकल SIM कार्ड की जरूरत नहीं"
+      },
+      "step3": {
+        "title": "स्कैन और इंस्टॉल करें",
+        "description": "हमारे द्वारा भेजे गए QR कोड को स्कैन करके अपने डिवाइस पर eSIM इंस्टॉल करें"
+      },
+      "step4": {
+        "title": "जुड़कर यात्रा करें",
+        "description": "पहुँचने पर अपना eSIM सक्रिय करें और सीमलेस कनेक्टिविटी का आनंद लें"
+      }
+    },
+    "benefits": {
+      "title": "हमारा eSIM क्यों चुनें?",
+      "subtitle": "जहाँ भी यात्रा करें, बिना परेशानी कनेक्टिविटी का अनुभव करें",
+      "global": {
+        "title": "190+ देश",
+        "description": "हमारे विस्तृत नेटवर्क के साथ 190+ देशों में जुड़े रहें"
+      },
+      "savings": {
+        "title": "90% तक बचत",
+        "description": "महंगे रोमिंग शुल्क से बचें और डेटा के लिए स्थानीय कीमतें दें"
+      },
+      "instant": {
+        "title": "तुरंत सक्रियण",
+        "description": "ईमेल द्वारा तुरंत अपना eSIM प्राप्त करें। कोई प्रतीक्षा नहीं, कोई शिपिंग नहीं"
+      },
+      "easy": {
+        "title": "आसान सेटअप",
+        "description": "सरल QR कोड इंस्टॉलेशन। कोई तकनीकी ज्ञान आवश्यक नहीं"
+      },
+      "secure": {
+        "title": "सुरक्षित भुगतान",
+        "description": "आपकी भुगतान जानकारी बैंक-स्तरीय एन्क्रिप्शन से सुरक्षित है"
+      },
+      "support": {
+        "title": "24/7 सहायता",
+        "description": "हमारी सहायता टीम हमेशा आपकी मदद के लिए तैयार है, कभी भी, कहीं भी"
+      }
+    },
+    "faq": {
+      "title": "अक्सर पूछे जाने वाले प्रश्न",
+      "subtitle": "eSIM के बारे में वह सब कुछ जो आपको जानना चाहिए",
+      "items": {
+        "whatIsEsim": {
+          "question": "eSIM क्या है?",
+          "answer": "eSIM (एम्बेडेड SIM) एक डिजिटल SIM है जो आपको फिजिकल SIM कार्ड का उपयोग किए बिना सेलुलर प्लान सक्रिय करने की अनुमति देता है। यह आपके फोन में बना होता है और दूर से प्रोग्राम किया जा सकता है।"
+        },
+        "howToInstall": {
+          "question": "मैं eSIM कैसे इंस्टॉल करूं?",
+          "answer": "खरीदने के बाद, आपको ईमेल द्वारा एक QR कोड मिलेगा। बस अपने फोन की सेटिंग्स में जाएं, 'eSIM जोड़ें' चुनें और QR कोड स्कैन करें। eSIM मिनटों में इंस्टॉल हो जाएगा।"
+        },
+        "compatible": {
+          "question": "क्या मेरा फोन eSIM के साथ संगत है?",
+          "answer": "अधिकांश आधुनिक स्मार्टफोन eSIM को सपोर्ट करते हैं, जिसमें iPhone XS और नए, Samsung Galaxy S20 और नए, Google Pixel 3 और नए शामिल हैं। eSIM सपोर्ट के लिए अपने फोन की सेटिंग्स जांचें।"
+        },
+        "multipleCountries": {
+          "question": "क्या मैं एक eSIM को कई देशों में उपयोग कर सकता हूं?",
+          "answer": "हां! हमारे क्षेत्रीय प्लान एक eSIM के साथ कई देशों को कवर करते हैं। यूरोप, एशिया या अन्य क्षेत्रों में यात्रा के लिए बिल्कुल सही। कवर किए गए देशों की सूची के लिए प्लान विवरण देखें।"
+        },
+        "validity": {
+          "question": "मेरे eSIM की वैधता कब शुरू होती है?",
+          "answer": "आपके eSIM की वैधता तब शुरू होती है जब आप पहली बार अपने गंतव्य देश में मोबाइल नेटवर्क से कनेक्ट होते हैं, न कि जब आप खरीदते या इंस्टॉल करते हैं। सुविधा के लिए इसे अपनी यात्रा से पहले इंस्टॉल करें।"
+        },
+        "topUp": {
+          "question": "क्या मैं अपना eSIM टॉप-अप कर सकता हूं?",
+          "answer": "हां! आप हमारी वेबसाइट के माध्यम से आसानी से अपने मौजूदा eSIM में अधिक डेटा जोड़ सकते हैं। नया eSIM खरीदने या फिर से इंस्टॉलेशन प्रक्रिया से गुजरने की जरूरत नहीं।"
+        }
+      }
+    },
+    "modal": {
+      "data": "डेटा",
+      "validity": "वैधता",
+      "speed": "गति",
+      "countries": "देश",
+      "coverageTitle": "कवरेज",
+      "included": "क्या शामिल है",
+      "feature1": "ईमेल द्वारा तुरंत eSIM डिलीवरी",
+      "feature2": "24/7 ग्राहक सहायता",
+      "feature3": "आसान टॉप-अप उपलब्ध",
+      "cancel": "रद्द करें",
+      "buyNow": "अभी खरीदें"
     }
   }
 }
